<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/heightEdit"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/heightText"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            app:layout_constraintHorizontal_bias="0.375"
            android:textAlignment="textStart"
            tools:ignore="LabelFor"
            android:autofillHints=""
            tools:targetApi="o"
            android:maxLength="3"/>
    <TextView
            android:text="@string/BMI_HEIGHT_CM"
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:id="@+id/heightText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintHorizontal_bias="0.018"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/massEdit"
            android:textAlignment="textStart" android:textSize="18sp"/>
    <TextView
            android:text="@string/BMI_RESULT"
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="30sp"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/heightEdit"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>
    <ImageView
            tools:srcCompat="@drawable/run"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/run"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
            android:layout_width="0dp"
            android:contentDescription="@string/BMI_MAIN_PIC_DESC" android:layout_height="@dimen/BMI_HEIGHT_MATCH"
            android:scaleType="centerCrop"/>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27"/>
    <TextView
            android:text="@string/BMI_MASS_KG"
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:id="@+id/massText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:textAlignment="textStart" android:textSize="18sp"/>
    <EditText
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/massEdit"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/massText"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:textAlignment="textStart"
            android:autofillHints=""
            tools:ignore="LabelFor"
            tools:targetApi="o"
            android:maxLength="3"/>

    <Button
            android:text="@string/BMI_COUNT_BUTTON_SIGN"
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            android:id="@+id/countBmi"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:id="@+id/bmiNumberView"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            android:textSize="42sp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:id="@+id/bmiDescriptionView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/bmiNumberView"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:textSize="26sp" android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            app:layout_constraintBottom_toTopOf="@+id/countBmi" app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintVertical_bias="0.100000024"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            app:srcCompat="@drawable/arrow"
            android:id="@+id/showInfo"
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            app:layout_constraintBottom_toTopOf="@+id/bmiDescriptionView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            tools:srcCompat="@drawable/arrow"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="invisible"
            android:contentDescription="@string/BMI_INFO_BUTTON_DESC"
            android:layout_height="@dimen/BMI_HEIGHT_MATCH" android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="@+id/guideline5" app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="@color/colorWhite" android:background="?attr/colorBackgroundFloating"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.80"/>
</android.support.constraint.ConstraintLayout>